# IrvineHacks2026

./: .gitignore  LICENSE.txt  README.md  ideas.md  models.txt  pyproject.toml
hand-music/: README.md  app.yaml
hand-music/python/: main.py
hand-music/sketch/: sketch.ino
ml/: airlib.py  examples.ipynb  what-is-tflite.ipynb
python/: airlib.py  anchorlib.py  examples.ipynb  headless.py  headless_eim.py  main.py  requirements.txt
sketch/: sketch.ino  sketch.yaml
