[project]
name = "airpiano"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-edge-litert>=2.1.2",
    "edge-impulse-linux>=1.2.2",
    "jupyterlab>=4.5.5",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
]
